--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start" : "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wassimouricha/Project-MERN.git"
+    "url": "git+https://github.com/wassimouricha/project-blog.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/wassimouricha/Project-MERN/issues"
+    "url": "https://github.com/wassimouricha/project-blog/issues"
   },
-  "homepage": "https://github.com/wassimouricha/Project-MERN#readme",
+  "homepage": "https://github.com/wassimouricha/project-blog#readme",
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
